# mcp23s08-io

./: .gitignore  Cargo.toml  README.md
examples/: README.md
examples/esp32io/: Cargo.toml
examples/esp32io/.cargo/: config.toml
src/: README_EN.md  README_RU.md  lib.rs  mcp23s08.rs  mcp23s08async.rs
tests/: mcp23s08_tests.rs
