[package]
name = "mcp23s08-io"
version = "0.1.0"
edition = "2024"


[workspace]
members = [".", "examples/esp32io"]


[lib]
path = "src/lib.rs"

[workspace.dependencies]
embedded-hal = "1.0.0"

[dependencies]
embedded-hal.workspace = true

[dev-dependencies]
embedded-hal-mock = {version = "0.11.1",features = ["eh1"]}